Configure eureka client and added this service to be discoverable by eureka