@@ -48,20 +48,27 @@ public class RedisLocationServiceImpl implements LocationService {
         GeoOperations<String, String> geoOps = stringRedisTemplate.opsForGeo();
         Distance radius = new Distance(SEARCH_RADIUS, Metrics.KILOMETERS);
 
-        // Fix: longitude first, latitude second
-        Circle within = new Circle(new Point(latitude , longitude), radius);
-        GeoResults<RedisGeoCommands.GeoLocation<String>> results = geoOps.radius(DRIVER_GEO_OPS_KEY,within);
+        // Correct order: longitude first, latitude second
+        Circle within = new Circle(new Point(longitude, latitude), radius);
+
+        GeoResults<RedisGeoCommands.GeoLocation<String>> results = geoOps.radius(DRIVER_GEO_OPS_KEY, within);
         List<DriverLocationDto> drivers = new ArrayList<>();
-        assert results != null;
-        for(GeoResult<RedisGeoCommands.GeoLocation<String>> result :results){
-            Point point = Objects.requireNonNull(geoOps.position(DRIVER_GEO_OPS_KEY, result.getContent().getName())).getFirst();
-            DriverLocationDto driverLocationDto =  DriverLocationDto.builder()
-                    .DriverId(result.getContent().getName())
-                    .latitude(point.getX())
-                    .longitude(point.getY())
-                    .build()   ;
-            drivers.add(driverLocationDto);
+
+        if (results != null) {
+            for (GeoResult<RedisGeoCommands.GeoLocation<String>> result : results) {
+                List<Point> points = geoOps.position(DRIVER_GEO_OPS_KEY, result.getContent().getName());
+                if (points != null && !points.isEmpty()) {
+                    Point point = points.get(0); // first element safely
+                    DriverLocationDto driverLocationDto = DriverLocationDto.builder()
+                            .DriverId(result.getContent().getName())
+                            .latitude(point.getY())    // latitude = Y
+                            .longitude(point.getX())   // longitude = X
+                            .build();
+                    drivers.add(driverLocationDto);
+                }
+            }
         }
-      return drivers;
+
+        return drivers;
     }
 }
